--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "clsx": "^2.0.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
-    "gsap": "^3.12.2",
+    "framer-motion": "^10.16.0",
     "next": "13.4.9",
     "postcss": "8.4.25",
     "react": "18.2.0",
@@ -24,6 +24,7 @@
     "react-toastify": "^9.1.3",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "zustand": "^4.4.1"
   }
 }
